# podcastknowledge

./: .env.example  .gitignore  CLAUDE.md  CLUSTERING_MANUAL.md  Dockerfile  Project_Refactor_Status_Update.md  README.md  SPEAKER_IDENTIFICATION_FIX.md  TRACKING_CHANGES.md  add_podcast.sh  analyze_db.py  analyze_podcast_nodes.sh  check_all_nodes.py  check_conversation_structure.py  check_episode_properties.py  check_episode_results.py  check_full_results.py  check_indexes.py  check_mel_robbins_db.py  check_mel_robbins_youtube_urls.py  check_mfm_db.py  check_mfm_units.py  check_port_7687_db.py  check_simple_results.py  colab_adaptation_guide.md  count_knowledge_units.py  current_enhancements.md  diagnose_meaningful_units.py  docker-compose.yml  docker_storage_report.md  find_313_segment_episode.py  fix_overlapping_units.patch  framework prompt.txt  future_enhancements.md  gap_analysis_report.md  google_notebooklm_ux_research_report.md  insight extraction prompt.txt  inspiration_1.txt  inspiration_2.txt  kg_enhancement.md  (+19 more)
seeding_pipeline/: .dockerignore  .env.example  .env.vtt.example  .flake8  .gitignore  .pre-commit-config.yaml  =1.0.0  BACKWARD_COMPATIBILITY_CLEANUP.md  BOTTLENECK_ANALYSIS_SUMMARY.md  CHANGELOG.md  COMPLETE_VTT_VALIDATION_REPORT.md  CONFIG_DOCUMENTATION.md  CONTRIBUTING.md  CRITICAL_FIXES_PLAN.md  DEPENDENCY_CLEANUP_COMPLETE.md  DEPLOYMENT.md  DUPLICATION_ANALYSIS_REPORT.md  Dockerfile.minimal  FINAL_CLEANUP_SUMMARY.md  FINAL_HONEST_ANALYSIS.md  FULL_SYSTEM_RESET.py  INFRASTRUCTURE_REQUIREMENTS.md  KNOWN_ISSUES.md  LANGCHAIN_MIGRATION_GUIDE.md  LICENSE  MIGRATION_SUMMARY.md  MINIMAL_INSTALLATION.md  PHASE1-6_VALIDATION_REPORT.md  PHASE1-7_VALIDATION_REPORT.md  PHASE2-6_REFACTORING_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_VALIDATION_COMPLETE.md  PHASE3_COMPLETION_REPORT.md  PHASE3_COMPLETION_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_FIX_PROGRESS.md  PHASE4_TEST_FIXES_SUMMARY.md  PHASE4_VALIDATION_REPORT.md  PHASE5A_COMPLETION_FINAL.md  (+124 more)
seeding_pipeline/benchmarks/: baseline.json
seeding_pipeline/checkpoints/: vtt_processed.json
seeding_pipeline/component_tracking/: entity_resolution_contributions.jsonl  entity_resolution_impacts.jsonl  knowledge_extractor_combined_impacts.jsonl  knowledge_extractor_impacts.jsonl  segment_preprocessor_impacts.jsonl  test_impacts.jsonl
seeding_pipeline/config/: clustering_config.yaml  component_dependencies.yml  config.example.yml  config.yml  entity_resolution_rules.yml  logging.yml  mel_robbins_config.yaml  podcasts.yaml  providers.yml  schemaless.example.yml  schemaless_properties.yml  slo.yml  vtt_config.example.yml
seeding_pipeline/docker/: Dockerfile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
seeding_pipeline/docs/: API_KEY_ROTATION_MIGRATION.md  CLEANUP_SUMMARY.md  CODE_REVIEW_CHECKLIST.md  DEPENDENCIES.md  DEPENDENCY_RESOLUTION_SUMMARY.md  DEPLOYMENT.md  DEPRECATION_TIMELINE.md  DESIGN_DECISIONS.md  DISTRIBUTED_TRACING.md  EXTRACTION_MIGRATION_GUIDE.md  FEATURE_FLAGS.md  MIGRATION.md  MIGRATION_PATH.md  MODEL_CONFIGURATION.md  PERFORMANCE_OPTIMIZATION_RESULTS.md  PHASE1-6_VALIDATION_REPORT.md  PHASE4_TEST_FIXES_SUMMARY.md  PHASE5_RESOLUTION_PLAN.md  PHASE5_RESOLUTION_STATUS.md  PHASE5_VALIDATION_REPORT.md  PHASE7_READINESS_PLAN.md  PROJECT_ORGANIZATION.md  SCHEMALESS_IMPLEMENTATION_VALIDATION.md  SCHEMALESS_VALIDATION_REPORT.md  SECURITY.md  SEMANTIC_IMPLEMENTATION_SUMMARY.md  SEMANTIC_PROCESSING.md  SPEAKER_IDENTIFICATION.md  SPEAKER_IDENTIFICATION_PROMPT_GUIDE.md  SPEAKER_IDENTIFICATION_TROUBLESHOOTING.md  TEST_MAINTENANCE_CHECKLIST.md  VTT_TEST_STRATEGY.md  YOUTUBE_SEARCH_SETUP.md  ci-workflow.md  clustering-implementation-review-report.md  clustering-implementation-todo.md  clustering-query-patterns.md  clustering-simple.md  clustering_maintenance_guide.md  clustering_rollback_plan.md  (+30 more)
seeding_pipeline/examples/: tracing_example.py
seeding_pipeline/k8s/: 01-namespace.yaml  02-configmap.yaml  03-secret.yaml  04-pvc.yaml  05-neo4j.yaml  06-redis.yaml  07-deployment.yaml  08-job.yaml  09-hpa.yaml  10-networkpolicy.yaml  11-ingress.yaml  12-jaeger.yaml  README.md  kustomization.yaml
seeding_pipeline/monitoring/: DASHBOARD_IMPLEMENTATION.md  README.md  alert-templates.tmpl  alertmanager.yml  docker-compose.jaeger.yml  docker-compose.monitoring.yml  manage-dashboards.sh  prometheus-alerts.yml  prometheus.yml  sli-queries.yml  slo-alerts.yml
seeding_pipeline/notebooks/: component_tracking_dashboard.ipynb
seeding_pipeline/profiling_results/: error_section_2025-06-06T03:56:47.054850.json  error_section_2025-06-06T03:56:47.054850.prof
seeding_pipeline/requirements/: all.txt  analysis.txt  api.txt  base.txt  dev.txt
seeding_pipeline/scripts/: README.md  add_speaker_distribution_index.py  analyze_db_sync.py  analyze_db_sync_detailed.py  analyze_dependencies.py  analyze_episode_units.py  analyze_test_imports.py  apply_neo4j_mocks.py  benchmark_caching.py  check_meaningful_units.py  check_schemaless_deps.py  cleanup_old_venvs.py  cleanup_topics_from_database.py  clear_database.py  delete_single_episode.py  detect_duplicates.py  extract_themes_retroactively.py  fix_database_duplicates.py  fix_enum_values.py  fix_imports.py  fix_remaining_imports.py  fix_test_imports.py  fix_verify_loop.py  generate_dependency_graph.py  install.bat  install.sh  manage_components.py  manage_known_issues.py  measure_performance.py  metrics_dashboard.py  migrate_requirements.py  migrate_to_neo4j_tracking.py  migrate_to_schemaless.py  monitor_caching.py  parse_import_errors.py  phase6_integration_tests.py  phase6_test_runner.py  pre_merge_validation.py  profile_schemaless_pipeline.py  query_speaker_distribution_examples.py  (+26 more)
seeding_pipeline/speaker_cache/: c80072dcf8b3.json  c80072dcf8b3.json.bak
seeding_pipeline/src/: __init__.py  __version__.py  persona_creation.py
seeding_pipeline/test_data/: comprehensive_test_episode.vtt  comprehensive_test_episode_expected_extractions.md  conversation_analysis_fail.vtt  end_to_end_pipeline_test.py  manual_analysis.md  (+16 more)
(+1518 files in other folders)
